# KVCompressionExperiments

./: .gitignore  SPEC.md  base_press.py  context_samples.py  experiments.py  fp8_press.py  harness.py  instrumented_press.py  plot_llama_baselines.py  plots.py  prefill_decoding_press.py  pyproject.toml  quant_press.py  report.md  run_baseline_llamacpp.sh  todo.md  utils.py
experiment-outputs/instrumented/Qwen/code/: captured_keys.pt  captured_values.pt  instrumented_stats.json  layer_stats_summary.csv
experiment-outputs/instrumented/Qwen/prose/: captured_keys.pt  captured_values.pt  instrumented_stats.json  layer_stats_summary.csv
experiment-outputs/instrumented/TinyLlama/code/: instrumented_stats.json  layer_stats_summary.csv
experiment-outputs/instrumented/TinyLlama/prose/: instrumented_stats.json  layer_stats_summary.csv
experiment-outputs/latency/: decoding_latency_all.csv
experiment-outputs/perplexity/: ppl_baseline.csv  ppl_vs_ctx_length.csv  quant_ppls.csv
llamacpp_baseline_results/: d_latency_vs_ctx.csv  latency_vs_ctx.csv  pg_latency_vs_ctx.csv  ppl_vs_ctx.csv  wikitext-2-test.txt
methods/: base_press.py  instrumented_press.py
methods/quant/: fp8_press.py  quant_press.py
notebooks/: experiments_speed_v_mem.ipynb
reports/: BASELINE_REPORT.tex  generate_report_plots.py  report.md
