[project]
name = "kvcompressionexperiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0,<3",
    "torch>=2.3.1,<3",
    "transformers>=4.56.0,<5.3",
    "datasets>=2.21.0",
    "pandas>=2.2.2,<3",
    "accelerate>=1.0.0,<2",
    "requests>=2.32.3,<3",
    "cachetools>=5.5.2,<6",
    "matplotlib"
]
